[gd_scene load_steps=3 format=3 uid="uid://d00thcnmwdboh"]

[ext_resource type="Script" path="res://scripts/Gameover.gd" id="1_2iifa"]
[ext_resource type="Script" path="res://scripts/Score.gd" id="2_f28j6"]

[node name="UI" type="CanvasLayer"]

[node name="Gameover" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 38.0
offset_top = 19.0
offset_right = 78.0
offset_bottom = 59.0
script = ExtResource("1_2iifa")

[node name="VBoxContainer" type="VBoxContainer" parent="Gameover"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 733.0
offset_top = 183.0
offset_right = 887.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
alignment = 1

[node name="RestartButton" type="Button" parent="Gameover/VBoxContainer"]
layout_mode = 2
text = "Reiniciar"

[node name="TitleMenuButton" type="Button" parent="Gameover/VBoxContainer"]
layout_mode = 2
text = "Ir al men√∫"

[node name="Score" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Score"]
layout_mode = 0
offset_left = 537.0
offset_top = 20.0
offset_right = 580.0
offset_bottom = 45.0
scale = Vector2(2, 2)
text = "0"
script = ExtResource("2_f28j6")

[connection signal="pressed" from="Gameover/VBoxContainer/RestartButton" to="Gameover" method="_on_button_pressed"]
[connection signal="pressed" from="Gameover/VBoxContainer/TitleMenuButton" to="Gameover" method="_on_title_menu_button_pressed"]
